random ahh commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -332,13 +332,13 @@
             <div class="box">
                 <h3>follow us</h3>
                 
-                <a href="https://www.linkedin.com/in/maulik-mittal-29085a29b/"> <i class="fab fa-linkedin"></i> Maulik Mittal</a>
+                <a href="https://www.linkedin.com/in/kanan-sharma-1b0505362/"> <i class="fab fa-linkedin"></i> Kanan Sharma</a>
                 <a href="https://www.linkedin.com/in/manya-agarwal-66a766296/"> <i class="fab fa-linkedin"></i> Manya Agarwal </a>
             </div>
 
         </div>
 
-        <div class="credit"> created with <3 by <span>Maulik Mittal and Manya Agarwal</span></div>
+        <div class="credit"> created with <3 by <span>Maulik Mittal and Kanan Sharma</span></div>
 
     </section>
 
